--- a/users/Hmohamed326.ini
+++ b/users/Hmohamed326.ini
@@ -1,2 +1,23 @@
 [users]
-permission=212
+permission=202
+
+[transfert]
+unexspy=1
+userdata=1
+eventcalendar=1
+cache=1
+
+[prefs]
+clashroyale.username=nova i bochum
+clashroyale.chestavailable=1
+clashroyale.currentarena=1
+clashroyale.server=native
+clashroyale.modescreen=fullscreen
+clashroyale.supercellid=0
+files.showhidden=0
+eventcalendar.synccloud=0
+system.serialcode=autogen
+system.wallpaper=island
+
+[eventcalendar]
+lastevent=20201010
